--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                             </li>
                         </ul>
                     </nav>
+                    <div class="header__btn-menu ">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -220,5 +225,6 @@
             </div>
         </footer>
     </div>
+<script src="./js/spript.js"></script>
 </body>
 </html>
