--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link type="image/x-icon" href="./img/favicon.jpg" rel="shortcut icon">
     <title>Konstruct</title>
 </head>
 <body>
@@ -16,9 +17,13 @@
                     <div class="hero__logo">
                         <img src="./img/projeco-logo.png" alt="logo">
                     </div>
-                    <h1 class="hero__title">PARTNER WITH KONSTUCT</h1>
-                    <h2 class="hero__subtitle">An award-winning construction management firm</h2>
-                    <a href="#" class="hero__btn">SCROLL DOWN</a>
+                    <div class="hero__title">
+                        <h1 class="hero__main-title">PARTNER WITH KONSTUCT</h1>
+                        <h2 class="hero__subtitle">An award-winning construction management firm</h2>
+                    </div>
+                    <div class="hero__scroll">
+                        <a href="#" class="hero__btn">SCROLL DOWN</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -221,7 +226,7 @@
                 </div>
             </div>
             <div class="footer__info">
-                <p>© 2017 Konstruct Inc. Designed by Jane Kathryn Teo</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
         </footer>
     </div>
