add animation (GSAP)

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
                         <p class="story__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
                     </div>
                     <div class="story__bg">
-                        <div class="story__bg-item">
+                        <div class="story__bg-item story__bg-item-1">
                             <h2 class="story__bg-title">WE PLAN</h2>
                             <img class="story__bg-img" src="./img/plan.png" alt="plan">
                         </div>
-                        <div class="story__bg-item">
+                        <div class="story__bg-item story__bg-item-2">
                             <h2 class="story__bg-title">WE MANAGE</h2>
                             <img class="story__bg-img" src="./img/manage.png" alt="manage">
                         </div>
-                        <div class="story__bg-item">
+                        <div class="story__bg-item story__bg-item-3">
                             <h2 class="story__bg-title">WE BUILD</h2>
                             <img class="story__bg-img" src="./img/bild.png" alt="bild">
                         </div>
@@ -99,17 +99,17 @@
                         </div>
                     </div>
                     <div class="capabilities__blocks">
-                        <div class="capabilities__item">
+                        <div class="capabilities__item capabilities__item-1">
                             <img class="capabilities__item--img" src="./img/project.png" alt="project">
                             <h2 class="capabilities__item--title">PROJECT AND CONSTRUCTION MANAGEMENT</h2>
                             <p class="capabilities__item--info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
                         </div>
-                        <div class="capabilities__item">
+                        <div class="capabilities__item capabilities__item-2">
                             <img class="capabilities__item--img" src="./img/struct.png" alt="struct">
                             <h2 class="capabilities__item--title">STRUCTURE AUDIT AND MAINTENANCE</h2>
                             <p class="capabilities__item--info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
                         </div>
-                        <div class="capabilities__item">
+                        <div class="capabilities__item capabilities__item-3">
                             <img class="capabilities__item--img" src="./img/factory.png" alt="factory">
                             <h2 class="capabilities__item--title">FACTORY CONSTRUCTION AND MODELING</h2>
                             <p class="capabilities__item--info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
@@ -134,7 +134,7 @@
             <div class="conteiner">
                 <div class="mail__wrap">
                     <h2 class="mail__title">Newsletter Signup</h2>
-                    <form action="">
+                    <form class="mail__form" action="">
                         <input placeholder="test@youremail.com" class="mail__input" type="text">
                         <div class="mail__btn">
                             <a href="#" class="mail__btn--link">SIGNUP</a>
@@ -230,6 +230,9 @@
             </div>
         </footer>
     </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>    
 <script src="./js/spript.js"></script>
 </body>
 </html>
