fixed burger menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="hero">
             <div class="conteiner">
-                <div class="hero__body">
+                <div id="hero" class="hero__body">
                     <div class="hero__logo">
                         <img src="./img/projeco-logo.png" alt="logo">
                     </div>
@@ -37,19 +37,19 @@
                     <nav class="header__nav">
                         <ul class="header__nav-list">
                             <li class="header__nav-item">
-                                <a class="header__nav-link">HOME</a>
+                                <a href="#hero" class="header__nav-link">HOME</a>
                             </li>
                             <li class="header__nav-item">
-                                <a class="header__nav-link header__nav-link--active">ABOUT</a>
+                                <a href="#story" class="header__nav-link header__nav-link--active">ABOUT</a>
                             </li>
                             <li class="header__nav-item">
-                                <a class="header__nav-link">SERVICES</a>
+                                <a href="#capabilities" class="header__nav-link">SERVICES</a>
                             </li>
                             <li class="header__nav-item">
-                                <a class="header__nav-link">WORK</a>
+                                <a href="#bild" class="header__nav-link">WORK</a>
                             </li>
                             <li class="header__nav-item">
-                                <a class="header__nav-link">CONTACT</a>
+                                <a href="#mail" class="header__nav-link">CONTACT</a>
                             </li>
                         </ul>
                     </nav>
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="story">
+        <div id="story" class="story">
             <div class="conteiner">
                 <h2 class="story__title">OUR STORY</h2>
                 <div class="story__wrap">
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div class="capabilities">
+        <div id="capabilities" class="capabilities">
             <div class="conteiner">
                 <div class="capabilities__wrap">
                     <div class="capabilities__header">
@@ -119,7 +119,7 @@
             </div>
         </div>
 
-        <div class="bild">
+        <div id="bild" class="bild">
             <div class="conteiner">
                 <div class="bild__wrap">
                     <h2 class="bild__title">Want to build something amazing?</h2>
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <div class="mail">
+        <div id="mail" class="mail">
             <div class="conteiner">
                 <div class="mail__wrap">
                     <h2 class="mail__title">Newsletter Signup</h2>
